main.css
/* vars */

:root {
  --background-color: #f2e3bc;
  --background-compliment-color: #c19875;
  --border-radius: 0.25rem;
  --dark-color: #222;
  --highlight-color: #374e4b;
  --light-color: #fdfaf7;
  --secondary-background-color: #96bbbb;
  --text-color: #414535;
}

/* reset */

html {
  box-sizing: border-box;
  font-size: 16px;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

/* generic styles */

* {
  color: var(--dark-color);
  font-family: "IBM Plex Mono", monospace;
  font-weight: 400;
  line-height: 2rem;
}

body {
  background-color: var(--light-color);
}

html {
  font-size: 18px;
}

a {
  color: var(--highlight-color);
  text-decoration: none;
}

a.button {
  border-radius: var(--border-radius);
  border: 2px solid;
  padding: 0.5rem 1rem;
}

a i {
  color: inherit;
}

section {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 12rem 4rem;
}

/* header styles */

header {
  align-items: baseline;
  background-color: var(--background-color);
  border-bottom: 1px solid var(--background-compliment-color);
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: space-between;
  padding: 2rem 4rem;
  position: fixed;
  width: 100%;
}

header h1,
nav {
  line-height: 2rem;
}

header h1 {
  font-size: 2rem;
}

nav {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
}

nav a.button {
  padding: 0 0.5rem;
}

#mobile-nav {
  display: none;
}

/* hero styles */

#hero {
  background-color: var(--background-color);
  height: 100vh;
  justify-content: center;
  min-height: 700px;
}

#hero h2 {
  font-size: 3rem;
}

#hero h3 {
  font-size: 2rem;
}

#hero a.button {
  color: var(--background-color);
  background-color: var(--highlight-color);
}

/* process styles */

#steps {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: center;
}

.step {
  align-items: center;
  background-color: var(--background-color);
  border-radius: var(--border-radius);
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 2rem;
  width: calc((100% - 2rem * 3) / 4);
}

.step span {
  line-height: 1.5rem;
  text-align: center;
}

/* work styles */

#work {
  background-color: var(--highlight-color);
}

#work h2 {
  color: var(--background-color);
}

.work-card {
  align-items: center;
  background-color: var(--secondary-background-color);
  border-radius: var(--border-radius);
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 4rem;
}

.work-card p {
  max-width: 35em;
}

/* tech styles */

#tech-list {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.tech-column {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.tech-item {
  align-items: center;
  display: flex;
  gap: 1rem;
}

/* services styles */

#services {
  display: block;
  background-color: var(--background-color);
  padding: 8rem 4rem;
}

#services-container {
  align-items: center;
  background-color: var(--highlight-color);
  border-radius: var(--border-radius);
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 4rem;
}

#services-container h2 {
  color: var(--background-color);
}

#service-list {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.service-column {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.service-column div {
  color: var(--background-color);
}

/* pricing styles */

#pricing {
  background-color: var(--highlight-color);
  padding: 8rem 4rem;
}

#pricing h2,
#pricing p {
  color: var(--background-color);
}

#plans {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.plan {
  align-items: center;
  background: var(--secondary-background-color);
  border-radius: var(--border-radius);
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 4rem;
}
.plan a.button {
  background-color: var(--highlight-color);
  color: var(--background-color);
}

.plan ul {
  border-top: 1px solid var(--highlight-color);
  list-style: disc inside;
  padding-top: 2rem;
}

/* faqs styles */

.faq {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 35em;
}

.faq-title {
  align-items: center;
  cursor: pointer;
  display: flex;
  gap: 1rem;
}

.faq-title i {
  transition: transform 0.2s ease-in;
}

.faq p {
  height: 0;
  opacity: 0;
  position: absolute;
  transition: height 0.2s ease-in;
  visibility: hidden;
  width: 0;
}

.faq-active i {
  transform: rotate(90deg);
}

.faq-active p {
  height: auto;
  opacity: 1;
  position: static;
  visibility: visible;
  width: auto;
}

/* footer styles */

footer {
  background-color: var(--background-compliment-color);
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: space-between;
  padding: 6rem 4rem 4rem;
}

#link-list {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.link-column {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.link-column a {
  color: var(--background-color);
  display: block;
}

@media (max-width: 50rem) {
  /* generic styles */

  section {
    padding: 6rem 2rem;
  }

  /* header styles */

  header {
    gap: 1rem;
    padding: 2rem;
    position: static;
  }

  #mobile-nav i {
    display: block;
    transition: opacity 0.2s ease-in;
  }

  #mobile-nav-close,
  header.mobile-nav-active #mobile-nav-open {
    height: 0;
    opacity: 0;
    visibility: hidden;
    width: 0;
  }

  header.mobile-nav-active #mobile-nav-close {
    height: auto;
    opacity: 1;
    visibility: visible;
    width: auto;
  }

  nav {
    height: 0;
    opacity: 0;
    position: absolute;
    transition: height 0.2s ease-in;
    visibility: hidden;
    width: 0;
  }

  header.mobile-nav-active nav {
    height: auto;
    opacity: 1;
    position: static;
    visibility: visible;
    width: auto;
  }

  #mobile-nav {
    display: block;
    font-size: 1.5rem;
  }

  /* hero styles */

  #hero h2 {
    font-size: 2rem;
  }

  /* process styles */

  .step {
    width: auto;
  }

  /* work styles */

  .work-card {
    padding: 4rem 2rem;
  }

  /* tech styles */

  /* services styles */

  #services-container {
    padding: 4rem 2rem;
  }

  /* pricing styles */

  .plan {
    padding: 4rem 2rem;
  }

  /* footer styles */
}

